fix(jobs): align availability guard with minute precision and late-job rebasing

--- a/src/app/features/jobs/start-next-job-shell.component.scss
+++ b/src/app/features/jobs/start-next-job-shell.component.scss
@@ -176,6 +176,8 @@
   color: #e8f7f2;
   padding: 0.72rem 0.82rem;
   min-width: 0;
+  width: 100%;
+  box-sizing: border-box;
 }
 
 select.field__input {
